# porfolio-website

./: index.html  package-lock.json  package.json  tailwind.config.js
ambient_expense_agent/: .env  Makefile  agent.py  config.py  pyproject.toml  send_test.py
ambient_expense_agent/.adk/: session.db
ambient_expense_agent/expense_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: App.jsx  index.css
src/components/: About.jsx  Blog.jsx  Contact.jsx  Hero.jsx  Insights.jsx  Journey.jsx  Lxwrvnx.jsx  LxwrvnxAudio.jsx  LxwrvnxGallery.jsx  MyFocus.jsx  Navbar.jsx  Projects.jsx  test.txt
src/data/: portfolioData.js
